# todo-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: release.yml
npm/: postinstall.js
src/: app.rs  input.rs  main.rs
src/i18n/: en.rs  es.rs  mod.rs  pt_br.rs
src/integrations/: mod.rs  notion.rs
src/model/: mod.rs  pomodoro.rs  review.rs  settings.rs  sync.rs  task.rs
src/storage/: json_store.rs  mod.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: detail.rs  footer.rs  mod.rs  modal.rs  pomodoro.rs  settings_menu.rs  sync_menu.rs  task_list.rs  update_banner.rs  welcome_screen.rs
src/utils/: auto_update.rs  date_parser.rs  export.rs  mod.rs  notifications.rs  perf.rs  startup.rs  update.rs
tests/: cli.rs
